fix collapse euro sign on admin notif

--- a/templates/global/css/admin.css
+++ b/templates/global/css/admin.css
@@ -540,6 +540,7 @@ ul#ui-autocomplete-admin li.ui-menu-item .ui-edit-item a.ui-edit-view { backgrou
 .msadmin_balloon_item table#msOrderDetailsSubTotalTable td { font-weight:bold; }
 .msadmin_balloon_item table#msOrderDetailsSubTotalTable td.msOrderDetailsSubTotalLabel { width:95%; text-align:right; padding:0 10px 0 0; }
 .msadmin_balloon_item table#msOrderDetailsSubTotalTable td.msOrderDetailsSubTotalValue { border:none; margin:0; padding:0 5px 0 0; }
+.msadmin_balloon_item table#msOrderDetailsSubTotalTable td.msOrderDetailsSubTotalProducts.msOrderDetailsSubTotalValue { white-space:nowrap; }
 
 .formfield-container-wrapper { overflow:hidden; width:100%; /* min-width:724px; */ min-width:702px; white-space:normal; }
 .formfield-wrapper { float:left; overflow:hidden; padding:0 10px 10px 0; }
